# clpeak

./: ANDROID_BUILD_README.md  build-final.sh
android-standalone/: CMakeLists.txt
src/cli/: main.cpp
src/opencl/: cl_peak.cpp
